--- a/index.html
+++ b/index.html
@@ -19,14 +19,21 @@
 <body style="background-color:#D6EAF8;">
   <!-- This is a comment -->
   <!--ordered list, unordered list-->
-  <h1><a href="index.html"><font color="black">About Chiho,Song</font></a></h1>
 
+  <h1><a href="index.html">About Chiho,Song</a></h1>
+  <ol>
+    <li><a href="1.html">History</a></li>
+    <li><a href="2.html">Purpose</a></li>
+    <li><a href="3.html">Study</a></li>
+  </ol>
+
+  <!-- <h1><a href="index.html"><font color="black">About Chiho,Song</font></a></h1>
   <ol>
     <li><a href="1.html"><font color="black">History</font></a></li>
     <li><a href="2.html"><font color="black">Purpose</font></a></li>
     <li><a href="3.html"><font color="black">Study</font></a></li>
   </ol>
-  <hr>
+  <hr> -->
 
   <h1 style="background-color:powderblue">
     About Chiho Song
