--- a/2.html
+++ b/2.html
@@ -3,14 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>Chiho_Purpose</title>
+    <style media="screen">
+      #active{
+        color:red;
+      }
+      .saw{
+        color:gray;
+      }
+      a{
+        color:black;
+      }
+    </style>
   </head>
 
   <body style="background-color:#D6EAF8;">
     <h1><a href="index.html"><font color="black">About Chiho,Song</font></a></h1>
     <ol>
-      <li><a href="1.html"><font color="black">History</font></a></li>
-      <li><a href="2.html"><font color="black">Purpose</font></a></li>
-      <li><a href="3.html"><font color="black">Study</font></a></li>
+      <li><a href="1.html" class="saw">History</font></a></li>
+      <li><a href="2.html" class="saw" id="active">Purpose</font></a></li>
+      <li><a href="3.html">Study</font></a></li>
     </ol>
 
     <hr>
