--- a/index.html
+++ b/index.html
@@ -6,12 +6,30 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=divice-width,
   initial-scale=1">
+
   <style>
-  img{
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-  }
+    img{
+      display:block;
+      margin-left:auto;
+      margin-right:auto;
+    }
+    a{
+      color:black;
+      text-decoration:none;
+    }
+    h1{
+      text-align: center;
+    }
+    p{
+      text-align: center;
+    }
+    ol{
+      text-align: center;
+    }
+    .saw{
+      color:gray;
+    }
+
   </style>
 </head>
 
@@ -20,10 +38,12 @@
   <!-- This is a comment -->
   <!--ordered list, unordered list-->
 
-  <h1><a href="index.html">About Chiho,Song</a></h1>
+  <h1><a href="index.html" style="text-decoration:underline">About Chiho,Song</a></h1>
   <ol>
-    <li><a href="1.html">History</a></li>
-    <li><a href="2.html">Purpose</a></li>
+    <li><a href="1.html" class="saw">History</a></li>
+    <br>
+    <li><a href="2.html" class="saw">Purpose</a></li>
+    <br>
     <li><a href="3.html">Study</a></li>
   </ol>
 
@@ -38,15 +58,14 @@
   <h1 style="background-color:powderblue">
     About Chiho Song
   </h1>
+  <!-- this is image -->
   <img src="chiho.jpg" width="150" class="center">
+
   <p style="text-align:center;">
     Welcome to Chiho's website. I am a student at Hebrew University.<br>
     I am intereted in providing the great information to others.
   </p>
   <hr>
-  <p style="font-family:courier;">
-    learning place.
-
 
 </body>
 
